fixed with overflow:visible on that item

--- a/sass/modules/lists/_bulk-select.sass
+++ b/sass/modules/lists/_bulk-select.sass
@@ -27,6 +27,7 @@
   +opacity(.5)
   display: block
   position: absolute
+  overflow: visible
   top: rhythm(.25)
   left: rhythm(.25)
   z-index: 5
